--- a/Helloworld/src/app/app.component.html
+++ b/Helloworld/src/app/app.component.html
@@ -175,12 +175,20 @@
       margin-block: 1.5rem;
     }
   }
+
+  img {
+    display: block;
+    margin: 0 auto;
+    width: 25%;
+  }
 </style>
 
 <div>
   <h1>
     {{this.title}}
   </h1>
+
+  <img [src] = "imgUrl" alt="the Bridgelabz logo: a bridge to Employment through a lab works."/>
 </div>
 
 <router-outlet></router-outlet>
