[Shivam Kumar Jha] Add . Displaying the inputted user name

--- a/Helloworld/src/app/app.component.html
+++ b/Helloworld/src/app/app.component.html
@@ -184,12 +184,14 @@
 </style>
 
 <div>
-  <h1>
-    {{this.title}}
-  </h1>
+  <h1> Hello, {{this.userName}} from Bridgelabz!</h1>
 
   <img [src] = "imgUrl" (click) = "onClick($event)"
         alt="the Bridgelabz logo: a bridge to Employment through a lab works."/>
+</div>
+
+<div>
+  <input type="text" [(ngModel)]="userName">
 </div>
 
 <router-outlet></router-outlet>
